tests/snapshots/codegen_snapshot_tests__issue217_rust_enum_match_bindings.snap
---
source: tests/codegen_snapshot_tests.rs
expression: rust_code
---
// Generated by the Incan compiler v<INCAN_VERSION>

#![allow(unused_imports, dead_code, unused_variables)]

// __INCAN_INSERT_MODS__

incan_stdlib::__incan_stdlib_version_check!("<INCAN_STDLIB_VERSION>");
use incan_stdlib::prelude::*;
use incan_derive::{FieldInfo, IncanClass};
pub use mail::Sender as RustSender;
fn id<T>(x: T) -> T {
    return x;
}
fn touch<T>(_: T) {
    ();
}
type PlanRel = RustSender;
fn f(x: PlanRel) {
    match x {
        PlanRel::Root(root) => {
            touch(id(root));
        }
        _ => {
            touch(id(x));
        }
    };
}
fn main() {
    ();
}
