tests/snapshots/codegen_snapshot_tests__issue236_non_string_join.snap
---
source: tests/codegen_snapshot_tests.rs
expression: rust_code
---
// Generated by the Incan compiler v<INCAN_VERSION>

// __INCAN_INSERT_MODS__

incan_stdlib::__incan_stdlib_version_check!("<INCAN_STDLIB_VERSION>");
#[allow(unused_imports)]
pub use mail::Dataset as RustDataset;
#[allow(dead_code)]
type Dataset = RustDataset;
#[allow(dead_code)]
fn join_datasets(left: Dataset, right: Dataset) -> Dataset {
    return left.join(right, true);
}
fn main() {
    std::panic::set_hook(
        std::boxed::Box::new(|panic_info| {
            if let Some(message) = panic_info.payload().downcast_ref::<&str>() {
                eprintln!("{message}");
            } else if let Some(message) = panic_info.payload().downcast_ref::<String>() {
                eprintln!("{message}");
            } else {
                eprintln!("generated program panicked");
            }
        }),
    );
    ();
}
