tests/snapshots/codegen_snapshot_tests__issue244_recursive_mut_list.snap
---
source: tests/codegen_snapshot_tests.rs
expression: normalize_projected_symbols_for_readable_codegen(& rust_code)
---
// Generated by the Incan compiler v<INCAN_VERSION>

// __INCAN_INSERT_MODS__

incan_stdlib::__incan_stdlib_version_check!("<INCAN_STDLIB_VERSION>");
fn walk(node_id: i64, pending: &mut Vec<i64>, visited: &mut Vec<bool>) {
    if node_id < 0 {
        return;
    }
    if *incan_stdlib::collections::list_get(&visited, (node_id) as i64) {
        return;
    }
    *incan_stdlib::collections::list_get_mut(visited, (node_id) as i64) = true;
    let _ = pending.push(node_id - 1);
    while ::std::convert::identity(pending.len() as i64) > 0 {
        let nxt = incan_stdlib::collections::__private::list_pop(pending);
        let _ = walk(nxt, pending, visited);
    }
}
fn main() {
    std::panic::set_hook(
        std::boxed::Box::new(|panic_info| {
            if let Some(message) = panic_info.payload().downcast_ref::<&str>() {
                eprintln!("{message}");
            } else if let Some(message) = panic_info.payload().downcast_ref::<String>() {
                eprintln!("{message}");
            } else {
                eprintln!("generated program panicked");
            }
        }),
    );
    let mut q: Vec<i64> = Vec::<i64>::new();
    let mut seen: Vec<bool> = vec![false, false, false];
    let _ = walk(0, &mut q, &mut seen);
    let _ = println!("{}", "ok");
}
