tests/snapshots/codegen_snapshot_tests__issue246_class_field_visibility.snap
---
source: tests/codegen_snapshot_tests.rs
expression: normalize_projected_symbols_for_readable_codegen(& rust_code)
---
// Generated by the Incan compiler v<INCAN_VERSION>

// __INCAN_INSERT_MODS__

incan_std_core::__incan_stdlib_version_check!("<INCAN_STDLIB_VERSION>");
#[derive(Debug, Clone, incan_derive::FieldInfo, incan_derive::IncanClass)]
pub struct LazyFrame {
    _cursor: i64,
    pub schema: String,
}
#[allow(non_snake_case, clippy::too_many_arguments)]
pub fn LazyFrame(_cursor: i64, schema: String) -> LazyFrame {
    LazyFrame { _cursor, schema }
}
impl incan_std_core::reflection::HasClassName for LazyFrame {
    fn __class_name__(&self) -> &'static str {
        <Self as incan_std_core::reflection::HasTypeClassName>::__class_name__()
    }
}
impl incan_std_core::reflection::HasTypeClassName for LazyFrame {
    fn __class_name__() -> &'static str {
        "LazyFrame"
    }
}
impl incan_std_core::reflection::HasFieldMetadata for LazyFrame {
    fn __fields__(
        &self,
    ) -> incan_std_core::frozen::FrozenList<incan_std_core::reflection::FieldInfo> {
        <Self as incan_std_core::reflection::HasTypeFieldMetadata>::__fields__()
    }
}
impl incan_std_core::reflection::HasTypeFieldMetadata for LazyFrame {
    fn __fields__() -> incan_std_core::frozen::FrozenList<
        incan_std_core::reflection::FieldInfo,
    > {
        static __INCAN_FIELDS: [incan_std_core::reflection::FieldInfo; 1] = [
            incan_std_core::reflection::FieldInfo {
                name: incan_std_core::frozen::FrozenStr::new("schema"),
                alias: None,
                description: None,
                wire_name: incan_std_core::frozen::FrozenStr::new("schema"),
                type_name: incan_std_core::frozen::FrozenStr::new("str"),
                has_default: false,
                extra: incan_std_core::frozen::FrozenDict::new(&[]),
            },
        ];
        incan_std_core::frozen::FrozenList::new(&__INCAN_FIELDS)
    }
}
impl incan_std_core::reflection::HasFieldValueReflection for LazyFrame {
    fn __field_value__(&self, name: &str) -> Option<String> {
        match name {
            "schema" => Some(format!("{}", self.schema)),
            _ => None,
        }
    }
    fn __field_items__(&self) -> Vec<(String, String)> {
        vec![("schema".to_string(), format!("{}", self.schema))]
    }
}
impl LazyFrame {
    pub fn cursor(&self) -> i64 {
        return self._cursor;
    }
    /// Returns field metadata for this type.
    pub fn __fields__(
        &self,
    ) -> incan_std_core::frozen::FrozenList<incan_std_core::reflection::FieldInfo> {
        static __INCAN_FIELDS: [incan_std_core::reflection::FieldInfo; 1] = [
            incan_std_core::reflection::FieldInfo {
                name: incan_std_core::frozen::FrozenStr::new("schema"),
                alias: None,
                description: None,
                wire_name: incan_std_core::frozen::FrozenStr::new("schema"),
                type_name: incan_std_core::frozen::FrozenStr::new("str"),
                has_default: false,
                extra: incan_std_core::frozen::FrozenDict::new(&[]),
            },
        ];
        incan_std_core::frozen::FrozenList::new(&__INCAN_FIELDS)
    }
}
